build: 增加antlr的例子

--- a/lalala-compiler/lalala-compiler.vcxproj
+++ b/lalala-compiler/lalala-compiler.vcxproj
@@ -89,6 +89,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>G:\antlr4-master\runtime\Cpp\runtime\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -139,7 +140,31 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="antlr\JSONBaseListener.cpp" />
+    <ClCompile Include="antlr\JSONBaseVisitor.cpp" />
+    <ClCompile Include="antlr\JSONLexer.cpp" />
+    <ClCompile Include="antlr\JSONListener.cpp" />
+    <ClCompile Include="antlr\JSONParser.cpp" />
+    <ClCompile Include="antlr\JSONVisitor.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="antlr\JSON.g4" />
+    <None Include="antlr\JSON.tokens" />
+    <None Include="antlr\JSONLexer.tokens" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="antlr\JSONBaseListener.h" />
+    <ClInclude Include="antlr\JSONBaseVisitor.h" />
+    <ClInclude Include="antlr\JSONLexer.h" />
+    <ClInclude Include="antlr\JSONListener.h" />
+    <ClInclude Include="antlr\JSONParser.h" />
+    <ClInclude Include="antlr\JSONVisitor.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="G:\antlr4-master\runtime\Cpp\runtime\antlr4cpp-vs2015.vcxproj">
+      <Project>{a9762991-1b57-4dce-90c0-ee42b96947be}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
