--- a/lalala-compiler/lalala-compiler.vcxproj
+++ b/lalala-compiler/lalala-compiler.vcxproj
@@ -149,7 +149,7 @@
     <ClCompile Include="antlr\DZGParser.cpp" />
     <ClCompile Include="antlr\DZGVisitor.cpp" />
     <ClCompile Include="DZGLang.cpp" />
-    <ClCompile Include="DZGLangBaseContent.cpp" />
+    <ClCompile Include="DZGLangFunction.cpp" />
     <ClCompile Include="DZGLangScope.cpp" />
     <ClCompile Include="DZGLangVisitor.cpp" />
     <ClCompile Include="main.cpp" />
@@ -168,8 +168,8 @@
     <ClInclude Include="antlr\DZGParser.h" />
     <ClInclude Include="antlr\DZGVisitor.h" />
     <ClInclude Include="BaseInclude.h" />
+    <ClInclude Include="DZGLangFunction.h" />
     <ClInclude Include="DZGLang.h" />
-    <ClInclude Include="DZGLangBaseContent.h" />
     <ClInclude Include="DZGLangListener.h" />
     <ClInclude Include="DZGLangScope.h" />
     <ClInclude Include="DZGLangVisitor.h" />
